[gd_scene load_steps=6 format=3 uid="uid://ccpmaudfndxb2"]

[ext_resource type="Script" path="res://scripts/Object/classicpipe.gd" id="1_k5lji"]
[ext_resource type="Texture2D" uid="uid://bgnxnhymdvttc" path="res://flappy-bird-assets-1.1.0/sprites/Object/pipe-green.png" id="2_xh5h8"]
[ext_resource type="PackedScene" uid="uid://cpv3cuhq8kpc1" path="res://scene/component/damage_component.tscn" id="3_75j3u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_81201"]
size = Vector2(46, 317)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_xmggi"]

[node name="pipes" type="Node2D" groups=["game_over"]]
z_index = -1
position = Vector2(1026, 487)
script = ExtResource("1_k5lji")

[node name="pipe1" type="StaticBody2D" parent="."]
visibility_layer = 512
position = Vector2(1036, 660)
metadata/_edit_group_ = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="pipe1"]
position = Vector2(1, -305)
scale = Vector2(3.72355, 0.906955)

[node name="Sprite2D" type="Sprite2D" parent="pipe1"]
visibility_layer = 512
scale = Vector2(1.5, 2)
texture = ExtResource("2_xh5h8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="pipe1"]
position = Vector2(0, -0.5)
scale = Vector2(1.5, 2)
shape = SubResource("RectangleShape2D_81201")

[node name="damage_component" parent="pipe1" instance=ExtResource("3_75j3u")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pipe1/damage_component"]
position = Vector2(0, -0.5)
scale = Vector2(1.5, 2)
shape = SubResource("RectangleShape2D_81201")

[node name="pipe2" type="RigidBody2D" parent="."]
visibility_layer = 512
position = Vector2(1300, -17)
gravity_scale = 0.0
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="pipe2"]
visibility_layer = 512
scale = Vector2(1.5, 2)
texture = ExtResource("2_xh5h8")
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="pipe2"]
position = Vector2(0, -0.5)
scale = Vector2(1.5, 2)
shape = SubResource("RectangleShape2D_81201")

[node name="damage_component" parent="pipe2" instance=ExtResource("3_75j3u")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pipe2/damage_component"]
position = Vector2(0, -0.5)
scale = Vector2(1.5, 2)
shape = SubResource("RectangleShape2D_81201")

[node name="score_count" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="score_count"]
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_xmggi")

[connection signal="screen_exited" from="pipe1/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="score_count" to="." method="_on_score_count_area_entered"]
